k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mini-eshop
  namespace: mini-eshop
spec:
  selector:
    app: mini-eshop
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
