k8s/ingress.yml
# Staging
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-eshop-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: staging.mini-eshop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mini-eshop
                port:
                  number: 3000
---
# Production
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-eshop-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mini-eshop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mini-eshop
                port:
                  number: 3000
